[gd_scene load_steps=3 format=2]

[ext_resource path="res://ships/DescendingState.gd" type="Script" id=1]
[ext_resource path="res://ships/PathGenerator.gd" type="Script" id=2]

[node name="DescendingState" type="Node"]
script = ExtResource( 1 )

[node name="PathGenerator" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PathMover" type="Tween" parent="."]
